--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@
 }
 body{
     font-family: 'Noto Sans', sans-serif;
-    font-family: 15px;
+    font-family: 50px;
 
 }
 /*menu*/
@@ -47,6 +47,9 @@ body{
   overflow: hidden;
   padding: 100px 0;
 }
+.ejercicio{
+    padding: 100px 0;
+}
 /*fondo*/
 .inicio::before {
   content: '';
@@ -68,7 +71,7 @@ body{
   grid-auto-rows: max-content;
   align-items: center;
   gap: 1em;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
   text-align: center;
   color: var(--color-secundario);
   margin-bottom: 15rem;
@@ -85,6 +88,10 @@ body{
   margin-bottom: 25px;
   text-align: center;
 }
+p{
+    font-size: 25px;
+}
+/*Boton*/
 .btn{
   display: inline-block;
   padding: 15px;
