--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Fredoka:wght@300;400&family=Noto+Sans:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Fira+Sans&family=Fredoka:wght@300;400&family=Noto+Sans:ital@1&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -12,10 +13,10 @@
   --naranja: #ff8800;
   --negro: rgb(36, 35, 35);
 }
-body{
-    font-family: 'Noto Sans', sans-serif;
-    font-family: 50px;
-
+body {
+  font-family: 'Noto Sans', sans-serif;
+  font-family: 40px;
+  align-items: center;
 }
 /*menu*/
 .menu {
@@ -47,9 +48,21 @@ body{
   overflow: hidden;
   padding: 100px 0;
 }
-.ejercicio{
-    padding: 100px 0;
+.ejercicio {
+  background-color: #e5e5f7;
+  background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px),
+    radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+  background-size: 20px 20px;
+  background-position: 0 0, 10px 10px;
+  border-radius: 50px;
 }
+.contenido {
+  padding-right: 50px;
+  padding-left: 50px;
+  padding-bottom: 50px;
+  padding-top: 10px;
+}
+
 /*fondo*/
 .inicio::before {
   content: '';
@@ -71,28 +84,32 @@ body{
   grid-auto-rows: max-content;
   align-items: center;
   gap: 1em;
-  padding-bottom: 150px;
+  padding-bottom: 0px;
   text-align: center;
   color: var(--color-secundario);
   margin-bottom: 15rem;
 }
 .inicio-titulo {
-  font-size: 3rem;
+  font-size: 5rem;
+  color: rgb(9, 206, 255);
 }
 .inicio-parrafo {
   margin-bottom: 20px;
+  font-size: 3rem;
+  font-weight: bold;
 }
 .subtitulo {
   color: var(--naranja);
   font-size: 2rem;
   margin-bottom: 25px;
   text-align: center;
+  background-color: var(--negro);
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
-p{
-    font-size: 25px;
-}
+
 /*Boton*/
-.btn{
+.btn {
   display: inline-block;
   padding: 15px;
   margin: 15px;
@@ -102,7 +119,7 @@ p{
   border-radius: 50px;
   text-decoration: none;
 }
-.btn:hover{
+.btn:hover {
   background-color: var(--naranja);
   color: var(--color-secundario);
 }
